# Cloudreve-V4-AfdianPay

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-release.yml
src/: run.py
src/afd_pay/: config.py  database.py  main.py  schemas.py
src/afd_pay/routes/: health.py  order.py  webhook.py
src/afd_pay/services/: afdian.py  cloudreve.py  notifier.py
