[project]
name = "afd-pay"
version = "1.0.0"
description = "Cloudreve v4 Pro 爱发电支付网关"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "quart>=0.19,<1.0",
    "aiosqlite>=0.20,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.0,<25.0",
    "python-dotenv>=1.0,<2.0",
    "hypercorn>=0.16,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
afd-pay = "afd_pay.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
